index.html and main.css

--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "description": "The Ment2Reach Website",
     "repository": "https://github.com/kw1234/ment2ReachWebsite",
     "logo": "",
-    "keywords": [],
+    "keywords": ["node", "express", "static"],
     "image": "",
     "scripts": {},
     "env": {},
